--- a/css/02-components.css
+++ b/css/02-components.css
@@ -46,13 +46,13 @@
     position: absolute;
     inset: 0;
     background: #ffffff;
-    clip-path: inset(50% 50% 50% 50% round 50px);
+    clip-path: circle(0% at 50% 50%);
     transition: clip-path 0.25s ease;
     z-index: -1;
 }
 
 .btn--secondary:hover::before {
-    clip-path: inset(-5% -5% -5% -5% round 0px);
+    clip-path: circle(100% at 50% 50%);
 }
 
 .btn--secondary:hover {
