--- a/css/02-components.css
+++ b/css/02-components.css
@@ -2069,8 +2069,8 @@ body:not([data-theme="dark"]) .career__role-icon .icon {
 }
 
 .career__logo-slot img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
